# attack_executor

./: .gitignore  README.md  attack_plan_blue.py  attack_plan_grandpa.py  attack_plan_granny.py  attack_plan_shocker.py  exploit_grandpa.rb  msf_commands.txt  pyproject.toml
attack_executor/: check_installation.py  config.py
attack_executor.egg-info/: PKG-INFO
attack_executor/attack_executor_mcp/: attack_executor_mcp.py
attack_executor/bash/: Shell.py
attack_executor/doc/: nessus_usage.md
attack_executor/exploit/: Metasploit.py  readme.md  test.py
attack_executor/nessus_raw_data/: nessus_raw_10_129_82_54_20250528_162411.json
attack_executor/others/: passwordGuesser.py
attack_executor/post_exploit/: Sliver.py
attack_executor/scan/: gobuster.py  nessus.py  nessus_parser.py  nessus_scanning.py  nmap.py  predicates.txt  smalllist.txt
attack_executor/search/: searchsploit.json  searchsploit.py
nessus_analysis/: exploit_frameworks_10_129_82_54_20250528_163406.json  exploit_frameworks_10_129_82_54_20250528_163406.txt  metasploit_exploits_10_129_82_54_20250528_163406.rc
nessus_analysis/blue/: blue_10_129_175_161_20250528_233050.rc  exploit_blue.rc  legacy_10_129_175_161_20250528_230117.json  legacy_10_129_175_161_20250528_230117.txt
nessus_analysis/grandpa/: grandpa.rc  (+3 more)
nessus_raw_data/: blue_10_10_10_40_20250608_150717.json  blue_10_129_175_161_20250528_225927.json  broker_10_129_44_65_20250529_152711.json  devel_10_129_140_131_20250529_154933.json  grandpa_10_10_10_14_20250608_171754.json  grandpa_10_129_45_100_20250529_160601.json  granny_10_10_10_15_20250608_185127.json  granny_10_129_95_234_20250529_164338.json  legacy_10_129_252_161_20250528_215711.json  nessus_raw_10_129_236_156_20250528_165421.json  nessus_raw_10_129_82_54_20250528_164537.json  optimum_10_129_85_79_20250528_222538.json  shocker_10_10_10_56_20250608_195631.json  shocker_10_129_9_160_20250605_193208.json
test/: config.ini  test.py  test_nessus.py
(+19 files in other folders)
