[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_module"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A simple example module"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = []
