[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attack_executor"
version = "0.2.6"
authors = [
    {name = "Lexus Wang", email = "lingzhiwang2025@u.northwestern.edu"},
]
description = "This library provides standard Python APIs to interact with common penetration testing and cyberattack tools, enabling automated penetration testing, red team operations, and development of cybersecurity-related LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "sliver-py>=0.0.19",
    "pymetasploit3>=1.0.6",
    "rich>=14.0.0"
]

[project.scripts]
attack_executor = "attack_executor.cli:main"

# The repo root contains data folders (nessus_analysis, nessus_raw_data)
# next to the real package. Since setuptools 61 refuses to auto-discover
# in the ambiguous flat-layout case, spell out which package is the one
# to ship. Without this, `pip install -e .` fails with "Multiple top-level
# packages discovered".
[tool.setuptools.packages.find]
include = ["attack_executor*"]
